@@ -33,6 +33,7 @@
     emit created on netfs rename
     rework overwrite dialog
     allow overwrite file with link
+    icon view mode automatic vertical scrollbar
 0.8.0   2012-09-14:
     fix horiz scroll on single-click mode auto-select #137
     deprecated keys in spacefm desktop files #136
